--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ License: `use_mit_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    survival, 
+    geepack, 
+    dplyr, 
+    stringr,
+    mets,
+    cmprsk
