minor bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(pseudo.surv_cif_mu_est)
 export(pseudo.surv_mu_est)
 export(pseudo.threedim)
 export(pseudo.twodim)
-import(cmprsk)
 import(dplyr)
 import(geepack)
 import(mets)
+import(stats)
 import(stringr)
 import(survival)
 import(timereg)
