--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,14 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    survival, 
-    geepack, 
-    dplyr, 
+    survival,
+    geepack,
+    dplyr,
     stats,
     stringr,
-    mets, 
-    timereg
+    mets,
+    timereg,
+    magrittr
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
