--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,8 @@ Imports:
     timereg,
     magrittr
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
