--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,7 @@ Authors@R:
     person("Julie Kjærulff", "Furberg", , "julie_furberg@hotmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8785-1462"))
 Maintainer: Julie Kjærulff Furberg <julie_furberg@hotmail.com>
-Description: This package computes one-, two- and three-dimensional pseudo-observations based on recurrent events and terminal events. 
-    Generalised linear models are fitted using generalised estimating equations. 
-    Technical details on the bivariate procedure can be found in `Bivariate pseudo-observations for recurrent event analysis with terminal events` (Furberg et al., 2021) 
+Description: This package computes one-, two- and three-dimensional pseudo-observations based on recurrent events and terminal events. Generalised linear models are fitted using generalised estimating equations. Technical details on the bivariate procedure can be found in `Bivariate pseudo-observations for recurrent event analysis with terminal events` (Furberg et al., 2021) 
 License: GPL (>= 2)
 URL: https://github.com/JulieKFurberg/recurrentpseudo
 Encoding: UTF-8
