--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,7 @@ Imports:
     timereg,
     magrittr, 
     ggplot2, 
-    gridExtra, 
-    qpdf
+    gridExtra
 Suggests: 
     knitr,
     rmarkdown,
