--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Maintainer: Julie Kjærulff Furberg <julie_furberg@hotmail.com>
 Description: This package computes one-, two- and three-dimensional pseudo-observations     
     based on recurrent events and terminal events. Generalised linear models are fitted 
     using generalised estimating equations. Technical details on the bivariate procedure 
-    can be found in `Bivariate pseudo-observations for recurrent event analysis with 
-    terminal events' (Furberg et al., 2021). 
+    can be found in "Bivariate pseudo-observations for recurrent event analysis with 
+    terminal events" (Furberg et al., 2021). 
 License: GPL (>= 2)
 URL: https://github.com/JulieKFurberg/recurrentpseudo
 Encoding: UTF-8
