--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,7 @@ Imports:
     dplyr,
     stats,
     stringr,
-    prodlim,
-    ggplot2, 
-    gridExtra
+    prodlim
 Suggests: 
     knitr,
     rmarkdown,
