--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(pseudo.surv_cif_mu_est)
 export(pseudo.surv_mu_est)
 export(pseudo.threedim)
 export(pseudo.twodim)
-import(dplyr)
 import(geepack)
 import(prodlim)
 import(stats)
 import(stringr)
 import(survival)
+importFrom(dplyr,left_join)
