--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,10 +19,15 @@ Imports:
     survival,
     geepack,
     stringr,
-    prodlim
+    prodlim, 
+    magrittr
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
+ImportFrom: 
+          dplyr left_join,
+          dplyr mutate,
+          dplyr ungroup
 Config/testthat/edition: 3
 VignetteBuilder: knitr
