--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,9 @@ import(prodlim)
 import(stats)
 import(stringr)
 import(survival)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,slice)
+importFrom(dplyr,ungroup)
+importFrom(magrittr,"%>%")
