--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,12 @@ Version: 1.0.0
 Authors@R: 
     person("Julie Kjærulff", "Furberg", , "julie_furberg@hotmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8785-1462"))
-Description: This package computes one-, two- and three-dimensional 
+Description: Computation of one-, two- and three-dimensional 
     pseudo-observations based on recurrent events and terminal events. 
     Generalised linear models are fitted using generalised estimating 
     equations. Technical details on the bivariate procedure can be found 
-    in `Bivariate pseudo-observations for recurrent event analysis with 
-    terminal events' (Furberg et al., 2021). 
+    in "Bivariate pseudo-observations for recurrent event analysis with 
+    terminal events" (Furberg et al., 2021) <doi:10.1007/s10985-021-09533-5>. 
 License: GPL (>= 2)
 URL: https://github.com/JulieKFurberg/recurrentpseudo
 Encoding: UTF-8
